GPU Subdivision doesn't retain custom normals #95697

Closed
opened 2022-02-11 10:08:15 +01:00 by Pavel Duong · 4 comments

System Information
Operating system: Arch Linux and Windows 10
Graphics card: Intel UHD 620 and NVIDIA GTX 1060 Super

Blender Version
Broken: blender-3.1.0-beta+v31.0263c8238bda-linux.x86_64-release
Worked:

Short description of error
When using Subsurface Subdivision modifier with Custom Normal, the custom normals aren't working with GPU subdivision enabled. See the following recording:

blender_gpu_subdiv.mp4

Exact steps for others to reproduce the error

  1. Open the file appended
  2. Notice missing smoothed normals when GPU subdivision is enabled

gpu_subdiv_custom_normal.blend

**System Information** Operating system: Arch Linux and Windows 10 Graphics card: Intel UHD 620 and NVIDIA GTX 1060 Super **Blender Version** Broken: `blender-3.1.0-beta+v31.0263c8238bda-linux.x86_64-release` Worked: **Short description of error** When using Subsurface Subdivision modifier with Custom Normal, the custom normals aren't working with GPU subdivision enabled. See the following recording: [blender_gpu_subdiv.mp4](https://archive.blender.org/developer/F12861723/blender_gpu_subdiv.mp4) **Exact steps for others to reproduce the error** 1. Open the file appended 2. Notice missing smoothed normals when GPU subdivision is enabled [gpu_subdiv_custom_normal.blend](https://archive.blender.org/developer/F12861726/gpu_subdiv_custom_normal.blend)
Author

Added subscriber: @vignette

Added subscriber: @vignette
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey changed title from EEVEE GPU Subdivision doesn't retain custom normals to GPU Subdivision doesn't retain custom normals 2022-02-11 19:46:30 +01:00

This issue was referenced by 48b26d9c2e

This issue was referenced by 48b26d9c2e0f4f4b6b5b7279c5bfc40c3ec77a6f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-02-15 17:53:57 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95697
No description provided.