Fix T95697: GPU subdivision ignores custom normals

Similarly to the CPU subdivision, we interpolate custom loop normals
from the coarse mesh, and this for the final normals.